fixed horizontal scroll

--- a/assets/sass/modules/_contact.scss
+++ b/assets/sass/modules/_contact.scss
@@ -7,3 +7,6 @@ h2{
 textarea{
   font-family: Lato, sans-serif;
 }
+body{
+  overflow-x: hidden;
+}
